ChangeLog for herdstat

2005-07-08 Aaron Walker <ka0ttic@gentoo.org>

	* lib/util_exceptions.hh: Use new[]/delete[] instead of malloc/free.

2005-07-03 Aaron Walker <ka0ttic@gentoo.org>

	* src/herds_xml_handler.cc: missed a LOCALSTATEDIR usage.
	* tests/common.sh, tests/away-test.sh, tests/dev-test.sh,
	tests/herd-test.sh, tests/metadata-test.sh, tests/stats-test.sh,
	tests/versions-test.sh: Reworked tests.  Added a test PORTDIR.
	* tests/metadata-regex-test.sh, tests/find-test.sh,
	tests/find-regex-test.sh: Added some more tests.

2005-07-02 Aaron Walker <ka0ttic@gentoo.org>

	* src/options.cc, src/devaway.cc, src/pkgcache.cc, src/herdstat.cc,
	src/herds_xml.hh, src/querycache.hh, src/metacache.cc, src/devaway.hh,
	src/common.hh, src/xml.hh, src/herds_xml.cc, src/querycache.cc,
	configure.ac, bashcomp, doc/herdstat.1.in: Added -L|--localstatedir
	option so that local state directory can be decided at run-time.  This
	will allow us to run 'make check' inside a sandbox without having to
	add a nasty addwrite to the ebuild.
	* tests/away-test.sh, tests/dev-test.sh, tests/herd-test.sh,
	tests/metadata-test.sh, tests/stats-test.sh, tests/versions-test.sh:
	Modified to use the -L option instead of -A and -H.
	* lib/cache.hh: Added path() function for returning protected _path
	member.

2005-06-30 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.cc: inline string::split().

2005-06-29 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Added tests/ Makefile's to the output list.  Updated
	version (1.1.1_p2).
	* src/action_pkg_handler.cc: Added missing check to ensure herd exists
	before dereferencing the result of herds_xml_T::operator[].  Fixes
	segmentation fault when "no-herd" packages are queried.  Also fixed
	metadata_matches() to interpret packages with no herd specified (not
	even "no-herd") as "no-herd".
	* lib/string.cc, lib/string.hh: Added stringify and destringify
	template functions.  Eliminates the need for the strtoul/strtoumax
	wrappers.