@@ -2,16 +2,4 @@
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1120383702">
-        Find out why specifying PORTDIR_OVERLAY='' on command line doesnt take affect - may have something to do with pkgcache.
-    </note>
-    <note priority="high" time="1120382431">
-        Don't use '.sh' as test extension.
-        <note priority="medium" time="1120383634">
-            -OR- use .sh wrappers for the actual binary.. may be best so we can still use ebegin/eend
-        </note>
-    </note>
-    <note priority="high" time="1120382465">
-        Write some libutil tests (will need to be C++ of course).
-    </note>
 </todo>
